--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "ember-simple-auth-custom-mars",
-  "version": "0.8.0-beta.2.CUSTOM.0",
+  "name": "ember-simple-auth-input",
+  "version": "0.8.0",
   "main": [
     "./simple-auth.js",
     "./simple-auth.amd.js",
